13656
compilation fails if all source files are passed to scalac:
```scala
  ~/newbug> cat I.java 
interface I { public enum E { E1 } }
  ~/newbug> cat J.java 
class J implements I {
	public void foo(E e) { }
}
  ~/newbug> cat S.scala 
object S { (new J).foo(null) }
  ~/newbug> ~/scala/dists/latest/bin/scalac I.java J.java S.scala 
J.java:2: error: not found: type E
	public void foo(E e) { }
                        ^
one error found
```

but succeeds if javac is run first:
```scala
  ~/newbug> javac *.java
  ~/newbug> ~/scala/dists/latest/bin/scalac S.scala
```

the bug is very easy to work around by writing out the name more fully:
```scala
  ~/newbug> cat J.java 
class J implements I {
	public void foo(I.E e) { }
}
  ~/newbug> ~/scala/dists/latest/bin/scalac I.java J.java S.scala
```

I'm running r15746.
